added Applications to Future Work

--- a/Alg_Design.tex
+++ b/Alg_Design.tex
@@ -254,7 +254,7 @@ To prevent this potentially catastrophic drift, velocity is estimated by numeric
 \mathbf{v}_{k} = \frac{\mathbf{p}_{k,\ meas.} - \mathbf{p}_{k-1,\ meas.}}{\Delta t_{P}} .
 \end{equation}
 %
-This pseudovelocity correction prevents unbounded velocity drift, which in turns makes the filter's output numerically stable.
+This pseudovelocity correction prevents unbounded velocity drift, which in turn makes the filter's output numerically stable.
 
 \subsection{Process Noise Covariance Matrix} \label{sec:Q_Matrix}
 \todo{diagonality?}
