minor edits, mostly to Future Work

--- a/Acknowledgements.tex
+++ b/Acknowledgements.tex
@@ -6,4 +6,4 @@ It is also my pleasure to thank Dr.~Danette Allen of the NASA Langley Autonomy I
 
 I would also like to thank Dr.~Loc Tran and Mr.~James Neilan of NASA Langley and Ralph Williams of Analytical Mechanics Associates, who collectively provided me with hours of programming guidance during my time at the Autonomy Incubator.
 
-Special thanks also go to Samuel Rubenking, who stuck with me to the end. Thanks, Sam.
+Special thanks go to Samuel Rubenking, who stuck with me to the end. Thanks, Sam.
