--- a/Alg_Design.tex
+++ b/Alg_Design.tex
@@ -46,9 +46,9 @@ where $\bm{\chi}^{i}$ is the $i$-th sigma point and $\left( \sqrt{\left( n + \la
 \lambda &= \alpha^{2} \left( n + \kappa \right) - n = -7
 \end{align}
 %
-These constants control the spread of the sigma points chosen within the filter. According to Wan et al.\ in \cite{Wan2000}, setting $\beta = 2$ is optimal for a Gaussian state distribution and $\kappa$ is commonly set to zero. The value of $\alpha$ is usually small and positive. Here, we chose $\alpha$ by trial and error after observing the rate at which the filter converged in a number of preliminary experiments. We found that choosing $0 < \alpha \leq 0.01$ made the filter slow to converge. The filter's estimates would lag behind the pose sensor's readings by an interval that was sometimes several seconds in length and in steady state would frequently undershoot the pose sensor. Conversely, choosing $\alpha \geq 1$ caused the filter to diverge. At $\alpha \approx 0.75$, the filter had no distinguishable lag and was highly stable.
+These constants control the spread of the sigma points chosen within the filter. According to Wan et al.\ in \cite{Wan2000}, setting $\beta = 2$ is optimal for a Gaussian state distribution and $\kappa$ is commonly set to zero. The value of $\alpha$ is usually small and positive. Here, we chose $\alpha$ by trial and error after observing the rate at which the filter converged in a number of preliminary experiments. We found that choosing $0 < \alpha \leq 0.01$ made the filter slow to converge. The filter's estimates would lag behind the pose sensor's readings by an interval that was sometimes several seconds in length and, in steady state, would undershoot the pose sensor. Conversely, choosing $\alpha \geq 1$ caused the filter to diverge. At $\alpha \approx 0.75$, the filter had no distinguishable lag and was highly stable.
 
-The square root matrix $\mathbf{A}$ of a matrix $\mathbf{B}$ is defined here as
+For the purpose of sigma point sampling, the square root matrix $\mathbf{A}$ of a matrix $\mathbf{B}$ is defined here as
 %
 \begin{equation}
 \mathbf{A} \mathbf{A}^{T} = \mathbf{B}
@@ -96,7 +96,7 @@ Next, the sigma points are projected into the sensor space through the observati
 \bm{\gamma}^{i}_{k} = h \left( \bm{\chi}^{i}_{k | k-1} \right), \quad i = 0, \dots, 2n.
 \end{equation}
 
-Let $m = 7$ represent the number of measurements taken from each PTAM message. Each of these messages is read in as an $m$-dimensional measurement vector $\mathbf{z}_{k}$ of the form
+Let $m = 7$ represent the number of measurements taken from each PTAM message. Each of these messages is mathematically interpreted as an $m$-dimensional measurement vector $\mathbf{z}_{k}$ of the form
 %
 \begin{equation}
 \mathbf{z}_{k} = \left\lbrace x,\ y,\ z,\ q_{x},\ q_{y},\ q_{z},\ q_{w} \right\rbrace ^{T} _{meas.} .
@@ -127,7 +127,7 @@ The corrected state $\hat{\mathbf{x}}_{k | k}$ is then the sum of the predicted 
 \hat{\mathbf{x}}_{k | k} = \hat{\mathbf{x}}_{k | k-1} + \mathbf{K}_{k} \left( \hat{\mathbf{z}}_{k} - \mathbf{z}_{k} \right) .
 \end{equation}
 %
-The corrected covariance $\mathbf{P}_{k | k}$ is the difference between the predicted covariance $\mathbf{P}_{k | k-1}$ and the predicted measurement covariance, weighted by the Kalman gain:
+The corrected covariance $\mathbf{P}_{k | k}$ is the difference between the predicted state covariance $\mathbf{P}_{k | k-1}$ and the predicted measurement covariance, weighted by the Kalman gain:
 %
 \begin{equation}
 \mathbf{P}_{k | k} = \mathbf{P}_{k | k-1} - \mathbf{K}_{k} \mathbf{P}_{zz} \mathbf{K}_{k}^{T} .
