--- a/Introduction.tex
+++ b/Introduction.tex
@@ -2,7 +2,9 @@
 
 \pagenumbering{arabic}
 
-Historically, man-portable drones capable of indoor reconnaissance have been computationally constrained due to restrictions on both size and weight. Recent advances in miniaturized desktop computers, as well as low-power Graphics Processing Units (GPUs), have enabled a new class of computationally intensive algorithms to run onboard small aircraft without degrading flight time or other performance metrics. Specifically, small drones now present a viable platform for high-fidelity Simultaneous Localization and Mapping (SLAM), visual object recognition, and state estimation algorithms employing numerous heterogeneous sensors.\todo{finish intro}
+Historically, small UAVs have been computationally constrained due to restrictions on both size and weight. Recent advances in miniaturized desktop computers, as well as low-power Graphics Processing Units (GPUs), have enabled a new class of computationally intensive algorithms to run onboard small aircraft without degrading flight time or other performance metrics. Specifically, small drones now present a viable platform for high-fidelity Simultaneous Localization and Mapping (SLAM), visual object recognition, and state estimation algorithms employing numerous heterogeneous sensors. In addition, the rising popularity of drones among hobbyists and researchers has fueled tremendous growth in the markets for brushless motors, electronic speed controllers, and airframes. With high-quality flight hardware and lightweight computers readily at hand, the arsenal of the robotics researcher has never been better stocked. The work detailed in this thesis is in many ways the product of these advantageous market conditions. With aircraft capable of lifting more payload and computers now lighter and smaller in footprint, the environment is ripe for outfitting high-performance vehicles with top-notch sensing capabilities.
+
+This work centers on an algorithm known as the Unscented Kalman Filter (UKF), a method of estimating the state of a dynamical system (such as a quadcopter) by fusing sensor inputs with knowledge of that system's dynamics. For years, this algorithm was inaccessible to roboticists and aerospace researchers due to its computational complexity. Computers capable of running the algorithm were simply too large, too heavy, and too power-hungry to be flown onboard small UAVs. The advent of smaller computers has changed this state of affairs. In this thesis, we present a formulation of the Unscented Kalman Filter aimed at estimating the state of a quadcopter. This UKF formulation fuses inputs from only two sensors: an inertial measurement unit (IMU) and a downward-facing camera. These two data streams are fused to generate accurate estimates of the vehicle's pose in real time. We propose this UKF framework as a hardware-minimal starting point for advanced multi-sensor fusion in UAV navigation.
 
 \section{Personal Motivation}
 
