--- a/Alg_Design.tex
+++ b/Alg_Design.tex
@@ -41,8 +41,8 @@ where $\bm{\chi}^{i}$ is the $i$-th sigma point and $\left( \sqrt{\left( n + \la
 %
 \begin{align}
 \alpha &= 0.75 \\
-\kappa &= 0 \\
 \beta &= 2 \\
+\kappa &= 0 \\
 \lambda &= \alpha^{2} \left( n + \kappa \right) - n = -7
 \end{align}
 %
@@ -77,7 +77,7 @@ W^{0}_{c} &= \dfrac{\lambda}{n + \lambda} + \left( 1 - \alpha^{2} + \beta \right
 W^{i}_{s} &= W^{i}_{c} = \dfrac{1}{2 \left(n + \lambda \right)}, \quad i = 1, \dots, 2n \nonumber
 \end{align}
 %
-and the process noise covariance matrix $\mathbf{Q}_{k}$ will be defined in Section~\ref{sec:Q_Matrix}.
+and the process noise covariance matrix $\mathbf{Q}_{k}$ (defined in Section~\ref{sec:Q_Matrix}).
 
 
 \subsection{Correction Step}
