--- a/Future_Work.tex
+++ b/Future_Work.tex
@@ -2,16 +2,16 @@
 
 \section{System Improvements}
 
-Experimentation with the \texttt{kalman\_sense} ROS package has revealed a number of areas for improvement. Speaking generally, the system needs enhancements to improve accuracy and become more robust to sensor dropout. Further development of this work likely would center on three main areas:
+Experimentation with the \texttt{kalman\_sense} ROS package has revealed a number of areas for improvement. Speaking generally, the system needs enhancements to improve accuracy and to become more robust with respect to sensor dropout. Further development of this work likely would center on three main areas:
 \begin{enumerate}
     \item Integration of new sensors,
     \item Improvements for current sensors, and
     \item Refinements to the underlying algorithm.
 \end{enumerate}
-Each of these would produce a marked improvement to the system in accuracy and robustness. For maximal effectiveness in adverse conditions, the system's sensors would need to be both individually robust and collectively redundant, in the hope that the loss of one source of information could be compensated for by a complementary sensor.
+Each of these would produce a marked improvement to the system in accuracy and robustness. For maximal effectiveness in adverse conditions, the system's sensors would need to be both individually robust and collectively redundant, so that complementary sensors could compensate for the loss of another sensor's information.
 
 \subsection{Integration of New Sensors}
-The accuracy and robustness of the system could be augmented by the integration of additional sensors, including but not limited to
+The accuracy and robustness of the system could be augmented by the integration of additional sensors, including but not limited to, the following:
 \begin{enumerate}
     \item One or more GPS receivers (particularly Real Time Kinematic\footnote{\url{https://en.wikipedia.org/wiki/Real_Time_Kinematic}} GPS),
     \item A pressure altimeter,
@@ -24,29 +24,29 @@ We reviously mentioned work from the GRASP Lab (\cite{Shen2011}) that demonstrat
 
 With the exception of certain sensors such as scanning LIDAR, which can cost tens of thousands of dollars, and RTK-GPS, which often falls in the same price range, these proposed new sensors would be inexpensive additions to the vehicle. Given the sophistication of current miniaturized sensors, it is not unreasonable to expect sub-meter or centimeter-level position accuracy from vehicles weighing fewer than fifteen pounds (including a substantial sensor payload) and costing less than 20,000~USD. It has been the case for a number of years now that meter-level accuracy could be taken for granted with ``toy'' quadcopters using only MEMS\footnote{``Microelectromechanical systems,'' \url{https://en.wikipedia.org/wiki/Microelectromechanical_systems}} IMUs and sub-\$100 GPS receivers. The trend of miniaturization has made more and more sensors of better and better quality increasingly available in the weight- and cost-constrained world of aerial robotics. A variety of inexpensive off-the-shelf autopilots, such as the Pixhawk~2.1\footnote{\url{http://www.proficnc.com/}}, already boast triple-redundant IMUs and support for multiple GPS modules. Many of the hardware integration challenges that once plagued hobbyists and researchers have been eliminated by popular demand for user-friendly drones.
 
-The organization of \texttt{kalman\_sense}'s code base is such that the integration of new sensors would require only the addition of new callback functions and ROS subscribers, as opposed to a full redesign or any major edits to the existing code. By a similar token, a new SLAM or VO algorithm could also be used in place of PTAM, allowing an ``apples-to-apples'' comparison of different vision algorithms. For example, Donavanik et al.\ \cite{Donavanik2016} have identified a new algorithm known as ORB-SLAM \cite{Mur-Artal2015} as a promising candidate for robust SLAM, already implemented in ROS. Because of ROS's sophisticated ecosystem of interoperable packages and message formats, any pose sensor employing the same message type as PTAM could plug in to \texttt{kalman\_sense} in a matter of seconds.
+The organization of the \texttt{kalman\_sense} package's code base is such that the integration of new sensors would require only the addition of new callback functions and ROS subscribers, as opposed to a full redesign or any major edits to the existing code. By a similar token, a new SLAM or VO algorithm could also be used in lieu of PTAM, allowing an ``apples-to-apples'' comparison of different vision algorithms. For example, Donavanik et al.\ \cite{Donavanik2016} have identified a new algorithm known as ORB-SLAM \cite{Mur-Artal2015} as a promising candidate for robust SLAM, already implemented in ROS. Because of ROS's sophisticated ecosystem of interoperable packages and message formats, any pose sensor employing the same message type as PTAM could plug in to \texttt{kalman\_sense} in a matter of seconds.
 
 Much of the design thinking that went into the \texttt{kalman\_sense} package was focused on this particular possibility. The aircraft of the future will be vehicles laden with a vast suite of heterogeneous sensors, the outputs of which would, at any given time, be used not only for inner-loop and outer-loop flight control but also for self-calibration, real-time diagnostics, and operator telemetry. Future UAVs will be akin to floating laboratories, carrying numerous means of measurement for all manner of self-sensing as well as scientific applications.
 
 \subsection{Improvements for Current Sensors}
 
-For improved pose measurements, a more robust implementation of PTAM could be written and the same experiments could be repeated for comparison. PTAM's rotation errors and inability to eliminate lens distortion pose severe limitations to its effectiveness in small UAS navigation. Moreover, if a rewritten formulation were able to interface with a downward-facing rangefinder, the initialization process could be eliminated altogether. The drawback is that making these changes would require a major rewrite, a project that could only feasibly be undertaken by an experienced team of computer vision researchers and software developers. The mere cost in terms of both time and labor would likely make this an unappealing proposition, especially if other ready-made SLAM/VO algorithms were available to serve as PTAM replacements.
+For improved pose measurements, a more robust implementation of PTAM could be written and the same experiments could be repeated for comparison. PTAM's rotation errors and inability to eliminate lens distortion pose severe limitations to its effectiveness in small UAS navigation. Moreover, if a rewritten formulation were able to interface with a downward-facing rangefinder, the initialization process could be eliminated altogether. The drawback is that making these changes would require a major rewrite, a project that could be feasibly undertaken only by an experienced team of computer vision researchers and software developers. The mere cost in terms of both time and labor would likely make this an unappealing proposition, especially if other ready-made SLAM/VO algorithms were available to serve as PTAM replacements.
 
-Processing power will also be central to the system's effectiveness during deployment on a real aircraft. This research is in many ways the product of recent advances in computing power. The advent of miniature desktop computers, such as the Intel~NUC\footnote{``Next Unit of Computing,'' \url{https://en.wikipedia.org/wiki/Next_Unit_of_Computing}}, as well as power-efficient Graphics Processing Units\footnote{\url{https://en.wikipedia.org/wiki/Graphics_processing_unit}} (GPUs) has made a new frontier of estimation and localization algorithms accessible for the first time in the UAV world. A simple and generally inexpensive approach to augmenting the \texttt{kalman\_sense} system would thus be the inclusion of top-of-the-line lightweight computing hardware. With modern onboard computers, even the need for cross-platform code compilation (so-called ``transpiling'') is eliminated because these computers employ the same x86 architecture used by most developers.
+Processing power will also be central to the system's effectiveness during deployment on a real aircraft. This research is in many ways the product of recent advances in computing power. The advent of miniature desktop computers, such as the Intel~NUC\footnote{``Next Unit of Computing,'' \url{https://en.wikipedia.org/wiki/Next_Unit_of_Computing}}, as well as power-efficient Graphics Processing Units\footnote{\url{https://en.wikipedia.org/wiki/Graphics_processing_unit}} (GPUs) has made a new frontier of estimation and localization algorithms accessible for the first time in the UAV world. A simple and generally inexpensive approach to augmenting the \texttt{kalman\_sense} system would thus be the inclusion of top-of-the-line lightweight computing hardware. With modern onboard computers, even the need for cross-platform code compilation (so-called ``transpiling'') is eliminated because these computers employ the same x86 architecture used by most software developers.
 
 \subsection{Refinements to the Underlying Algorithm}
 
-The UKF formulation itself presents another set of opportunities for improvement. In particular, better noise modeling would allow for increased accuracy. As described previously, the noise covariance matrices used during the experiments were only rough, static models meant to overestimate the noise in the system. In practice, it would be better to replace these with time-varying matrices whose terms more closely match the intrinsic parameters of the system. Due to the high degree of coupling between state variables and the fundamental nonlinearity of the process model, this type of work was considered to be outside the scope of my thesis. In the future, however, a better $\mathbf{Q}$ matrix could be determined, perhaps by application of autocovariance and system identification methods. Moreover, any new sensor integrated into the system would require its own $\mathbf{R}$ matrix detailing its particular idiosyncrasies. With this done, attention could then be turned to tuning the $\mathbf{Q} / \mathbf{R}$ ratio of each sensor, thus making the system even more faithful to known sensor parameters. With more sensors, self-calibration techniques such as those employed in \cite{Weiss2012} could also be implemented in order to avoid having to reinitialize one or more sensors in mid-air.
+The UKF formulation itself presents another set of opportunities for improvement. In particular, better noise modeling would allow for increased accuracy. As described previously, the noise covariance matrices used during the experiments were only rough, static models meant to overestimate the noise in the system. In practice, it would be better to replace these with time-varying matrices with terms more closely matching the intrinsic parameters of the system. Due to the high degree of coupling between state variables and the fundamental nonlinearity of the process model, this type of work was considered to be outside the scope of my thesis. In the future, however, a better $\mathbf{Q}$ matrix could be determined, perhaps by application of autocovariance and system identification methods. Moreover, any new sensor integrated into the system would require its own $\mathbf{R}$ matrix detailing its particular idiosyncrasies. With this done, attention could then be turned to tuning the $\mathbf{Q} / \mathbf{R}$ ratio of each sensor, thus making the system even more faithful to known sensor parameters. With more sensors, self-calibration techniques such as those employed in \cite{Weiss2012} could also be implemented in order to avoid reinitializing one or more sensors in mid-air.
 
 \section{Future Experiments}
 
-Using a SLAM/VO algorithm that addresses pure rotation and lens distortion would be the easiest and most cost effective way to improve the system. Testing different vision algorithms would thus be an appealing avenue of inquiry. It would behoove the researcher to characterize the system's behavior under the same conditions which caused the PTAM-based implementation to fail. In particular, experiments that include pure rotations, longer translations, and motion over non-flat terrain would mimic real-world flight missions more closely and provide a more holistic understanding of the system's effectiveness. Mounting the sensor suite on the underside of a UAV would allow for the collection of true flight data, perhaps exposing the limits of the system's speed limits and behavior in the presence of in-flight vibrations.
+Using a SLAM/VO algorithm that addresses pure rotation and lens distortion would be the easiest and most cost effective way to improve the system. Testing different vision algorithms would thus be an appealing avenue of inquiry. It would behoove the researcher to characterize the system's behavior under the same conditions which caused the PTAM-based implementation to fail. In particular, experiments that include pure rotations, longer translations, and motion over non-flat terrain would mimic real-world flight missions more closely and provide a more holistic understanding of the system's effectiveness. Mounting the sensor suite on the underside of a UAV would allow for the collection of true flight data, which could shed light on the system's speed limits and behavior in the presence of in-flight vibrations.
 
 After integrating new sensors, new experiments could be devised to characterize the system's effectiveness during sensor blackouts---for example, during an indoor-outdoor transition after integrating a GPS receiver. Experiments such as this could then inform the design of heuristic models for recognizing sensor degradation and perhaps even consensus-based estimation strategies. 
 
 \section{System Applications}
 
-Applications for this system are wide-ranging, spanning almost every conceivable use for a small drone. The following is a non-comprehensive list of possible applications:
+Applications for this system are wide-ranging, spanning almost every conceivable use for a small drone. The following is a non-exhaustive list of possible applications:
 \begin{enumerate}
     \item Mapping and 3D reconstruction of structures and topography,
     \item Emergency response,
@@ -58,17 +58,17 @@ What all of these applications have in common is the need for robust localizatio
 
 \subsubsection{Mapping and 3D Reconstruction}
 
-Growing demand for so-called ``precision agriculture'' has brought with it the need to map large areas of cropland at a high speed with a low cost point. In the past, this need has been met using satellite imagery and human-captured photography. With the arrival of low-cost drones, this work has been offloaded to aerial robots. Outfitted with special sensors such as hyperspectral cameras\footnote{\url{https://en.wikipedia.org/wiki/Hyperspectral_imaging}}, small UAS are able to provide minute-by-minute coverage of large expanses of land. More interesting still, these robots can be outfitted with reservoirs of pesticide or fertilizer and deployed to spray individual plants autonomously. It is in roles such as this that high-accuracy robust localization becomes a necessity. The accuracy required for precision agriculture can be provided using the sensor fusion techniques discussed in this thesis.
+Growing demand for so-called ``precision agriculture'' has brought with it the need to map large areas of cropland at a high speed, with a low cost point. In the past, this need has been met using satellite imagery and human-captured photography. With the arrival of low-cost drones, this work has been offloaded to aerial robots. Outfitted with special sensors such as hyperspectral cameras\footnote{\url{https://en.wikipedia.org/wiki/Hyperspectral_imaging}}, small UAS are able to provide minute-by-minute coverage of large expanses of land. More interesting still, these robots can be outfitted with reservoirs of pesticide or fertilizer and deployed to spray individual plants autonomously. It is in roles such as this that high-accuracy robust localization becomes a necessity. The accuracy required for precision agriculture can be provided using the sensor fusion techniques discussed in this thesis.
 
 The surfaces of buildings and other structures can be mapped in a similar fashion, given the appropriate sensors and the right framework by which to fuse them. 3D reconstruction has become popular among real estate agents, safety inspectors, and other parties with a vested interest in precise 3D rendering of large geometries. In this case, the aircraft must be able to localize itself precisely in order to take full advantage of onboard sense-and-avoid technologies. The ability of the aircraft to estimate its position is crucial to its ability to map hard-to-reach areas and maintain stable flight. Sensor fusion systems shine when GPS and other sensors are inevitably compromised under overhangs or in the presence of electromagnetic interference.
 
 \subsubsection{Emergency Response}
 
-UAS technologies have become a desirable tool for first responders in many parts of the world. The ability to deploy a UAV to survey forest fires or search for missing persons has been a game changer for law enforcement and emergency personnel. In the case of looking for survivors of a natural disaster, the requirements for a vehicle system are accurate localization and overall robustness. Vehicles sent into harm's way will have to be able to navigate in sensor-compromised environments, sometimes at substantial speed. This use case highlights the need for redundant sensors and intelligent, failure-resistant sensor fusion.
+UAS technologies have become a desirable tool for first responders in many parts of the world. The ability to deploy a UAV to survey forest fires or search for missing persons has been a game changer for law enforcement and emergency personnel. In the case of looking for survivors of a natural disaster, the requirements for a vehicle system are accurate localization and overall robustness. Vehicles sent into dangerous environments will have to be able to navigate in sensor-compromised environments, sometimes at substantial speed. This use case highlights the need for redundant sensors and intelligent, failure-resistant sensor fusion.
 
 \subsubsection{Infrastructure Inspection}
 
-Infrastructure inspection is similar in several respects to 3D mapping. In both cases, small drones are preferable to manned aircraft because of their low cost, high maneuverability, and ease of use. In recent years, governments and private corporations have taken an interest in using small aircraft to automate the inspection of many types of infrastructure, including
+Infrastructure inspection is similar in several respects to 3D mapping. In both cases, small drones are preferable to manned aircraft because of their low cost, high maneuverability, and ease of use. In recent years, governments and private corporations have taken an interest in using small aircraft to automate the inspection of many types of infrastructure, including the following:
 \begin{enumerate}
     \item Power lines,
     \item Oil rigs,
@@ -91,4 +91,4 @@ Perhaps the most obvious application of a UKF fusion framework is in military op
     \item Autonomous deliveries of materiel in theater, and
     \item Human-machine teaming.
 \end{enumerate}
-Every combat zone will constitute a hostile environment for UAV operations, especially in the presence of GPS spoofing/jamming technologies. Combat UAVs would have to be able to tolerate multiple simultaneous sensor failures. Urban flight operations bring with them all of the same difficulties mentioned earlier, only with the added challenge of violent enemy intervention. Robust sensor fusion could automate the task of operational overwatch and provide mission-critical intelligence in a timely manner---but only if the vehicle can fly in sensor-hostile locales.
+Every combat zone will constitute a hostile environment for UAV operations, especially in the presence of GPS spoofing/jamming technologies. Combat UAVs would have to be able to tolerate multiple simultaneous sensor failures. Urban flight operations bring with them all of the same difficulties mentioned earlier, only with the added challenge of violent enemy intervention. Robust sensor fusion could automate the task of operational overwatch and provide mission-critical intelligence in a timely manner---but only if the vehicle can localize itself reliably in sensor-hostile locales.
