--- a/Title_Page.tex
+++ b/Title_Page.tex
@@ -3,7 +3,7 @@
 \begin{center}
 \begin{doublespacing}
 {\Large 
-A Hardware-Minimal Unscented Kalman Filtering Framework for Visual-Inertial Navigation of Small Unmanned Aircraft
+A Hardware-Minimal Unscented Kalman Filter Framework for Visual-Inertial Navigation of Small Unmanned Aircraft
 }
 \vfill
 \end{doublespacing}
